# acl-miniconf-old

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: lint_code.yml
gather/: posterList.py
